to-do-app : Added Basic JS Functionality + Minor HTML and CSS modification

--- a/to-do-app/app.html
+++ b/to-do-app/app.html
@@ -16,87 +16,32 @@
     <main>
         <section class="todo-container">
 
-            <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
+              <div class="todo">
+                <input type="checkbox" name="" class="checkbox">
                 <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
+                   <h3 class="main-title">Attend Phil Class - Group Discussion</h3>
                    <p class="main-deadline">Deadline</p>
                 </div>
                 <img src="images/dustbin-closed.png" alt="Delete" class="delete"><!--Delete button image-->
               </div>
 
               <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
+                <input type="checkbox" name="" class="checkbox">
                 <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
+                   <h3 class="main-title">Attend EMT Lecture</h3>
                    <p class="main-deadline">Deadline</p>
                 </div>
-                <img src="images/dustbin-closed.png" alt="Delete" class="delete"> <!--Delete button image-->
+                <img src="images/dustbin-closed.png" alt="Delete" class="delete"><!--Delete button image-->
               </div>
 
               <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
+                <input type="checkbox" name="" class="checkbox">
                 <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
+                   <h3 class="main-title">Attend Optics Lecture</h3>
                    <p class="main-deadline">Deadline</p>
                 </div>
-                <img src="images/dustbin-closed.png" alt="Delete" class="delete"> <!--Delete button image-->
+                <img src="images/dustbin-closed.png" alt="Delete" class="delete"><!--Delete button image-->
               </div>
-              
-              <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
-                <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
-                   <p class="main-deadline">Deadline</p>
-                </div>
-                <img src="images/dustbin-closed.png" alt="Delete" class="delete"> <!--Delete button image-->
-              </div>
-
-              <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
-                <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
-                   <p class="main-deadline">Deadline</p>
-                </div>
-                <img src="images/dustbin-closed.png" alt="Delete" class="delete"> <!--Delete button image-->
-              </div>
-
-              <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
-                <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
-                   <p class="main-deadline">Deadline</p>
-                </div>
-                <img src="images/dustbin-closed.png" alt="Delete" class="delete"> <!--Delete button image-->
-              </div>
-
-              <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
-                <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
-                   <p class="main-deadline">Deadline</p>
-                </div>
-                <img src="images/dustbin-closed.png" alt="Delete" class="delete"> <!--Delete button image-->
-              </div>
-
-              <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
-                <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
-                   <p class="main-deadline">Deadline</p>
-                </div>
-                <img src="images/dustbin-closed.png" alt="Delete" class="delete"> <!--Delete button image-->
-              </div>
-
-              <div class="todo">
-                <input type="checkbox" name="" id="todo-checkbox-0" class="checkbox">
-                <div class="todo-content">
-                   <h3 class="main-title">Title</h3>
-                   <p class="main-deadline">Deadline</p>
-                </div>
-                <img src="images/dustbin-closed.png" alt="Delete" class="delete"> <!--Delete button image-->
-              </div>
-              
 
         </section>
         <!-- A button to create new todos which pops up an overlay -->
@@ -107,7 +52,7 @@
                 <button class="create-todo-close-btn">&times;</button>
             </div>
             <div class="create-todo-main">
-                <textarea name="" id="create-description" cols="30" rows="12" placeholder="Description" class="create-todo-desc"></textarea>
+                <textarea name="" id="create-description" cols="30" rows="11" placeholder="Description" class="create-todo-desc"></textarea>
                 <label for="create-deadline">
                     <span class="create-deadline-heading">Set Deadline : </span>
                     <input type="date" name="" id="create-deadline">
